# TheTravellingSalesman

./: .env.example  .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  frontend.Dockerfile  github_index.html  mlops_architecture.md  pyproject.toml  specification.md  streamlit_app.py
.github/workflows/: deploy.yml  promote.yml
.streamlit/: config.toml
app/: main.py
app/api/: routes.py
app/solvers/: __init__.py  conventional.py  dataset.py  notebook_transformer.py  validation.py
app/training/: trainer.py
app/ui/: components.py  styles.py
frontend/: app.js  index.html  style.css
misc/: Copy of Final RAHUL_HIRUR.ipynb  app_newOne.py
scripts/: train.py  upload_datasets.py  verify_spaces.py
tests/: test_api.py  test_dataset.py  test_solvers.py  test_validation.py
